added outline comments to js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <script src="jquery-3.5.1.min.js"></script>
     <nav class="nav">
         <h1 class="nav-text">View Highscores</h1>
         <p class="timer-display">Time: 0</p>
@@ -22,6 +23,7 @@
     <button class="start-quiz-button">Start Quiz</button>
 
     <script src="assets/js/script.js"></script>
+
 </body>
 
 </html>
