--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <script src="jquery-3.5.1.min.js"></script>
     <nav class="nav">
         <h1 class="nav-text">View Highscores</h1>
-        <p class="timer-display">Time: 0</p>
+        <p class="timer-display">Time: <span id="placeholder">0</span></p>
 
     </nav>
-    <container class="quiz-box">
-        <p class="quiz-header">Coding Quiz Challenge</p>
-        <p class="quiz-body">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoreTime by ten seconds.</p>
-    </container>
-    <button class="start-quiz-button">Start Quiz</button>
+    <container id="test" class="quiz-box">
+        <p id="quiz-question" class="quiz-header">Coding Quiz Challenge</p>
+        <p id="quiz-answers" class="quiz-body">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoreTime by ten seconds.</p>
 
+    </container>
+    <button id="start-quiz-button" class="start-quiz-button">Start Quiz</button>
+    <p id="test-answer"></p>
     <script src="assets/js/script.js"></script>
 
 </body>
